Рефакторинг секции навигации и Лого

--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
      <!--Шапка Сайта-->
     <header class="page-header">
       <div class="container page-header--position">
-        <a href="./index.html" class="logo">Web<span class="page-header--logo">Studio</span></a>
+        <a href="./index.html" class="logo logo--header">Web<span class="page-header--logo">Studio</span></a>
         <!-- navigation section-->
         <nav class="header-nav">
           <ul class="header-nav__list list">
