разбивает style.css на архитектуру sass

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="./css/style.css" />
-  <link rel="stylesheet" href="./css/main.css" />
+  <link rel="stylesheet" href="./css/main.min.css" />
 </head>
 
 <body class="body">
@@ -162,31 +161,31 @@
             <div class="team-card">
               <h3 class="title name">Игорь Демьяненко</h3>
               <p class="position">Product Designer</p>
-              <ul class="social-list list">
-                <li class="social-list-item">
-                  <a href="" class="social-link link">
-                    <svg class="social-icon team-social" width="20" height="20">
+              <ul class="social__list list">
+                <li class="social__item">
+                  <a href="" class="social__link link">
+                    <svg class="social__icon team-social" width="20" height="20">
                       <use href="./images/icons.svg#instagram"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-list-item">
-                  <a href="" class="social-link link">
-                    <svg class="social-icon team-social" width="20" height="20">
+                <li class="social__item">
+                  <a href="" class="social__link link">
+                    <svg class="social__icon team-social" width="20" height="20">
                       <use href="./images/icons.svg#twitter"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-list-item">
-                  <a href="" class="social-link link">
-                    <svg class="social-icon team-social" width="20" height="20">
+                <li class="social__item">
+                  <a href="" class="social__link link">
+                    <svg class="social__icon team-social" width="20" height="20">
                       <use href="./images/icons.svg#facebook"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-list-item">
-                  <a href="" class="social-link link">
-                    <svg class="social-icon team-social" width="20" height="20">
+                <li class="social__item">
+                  <a href="" class="social__link link">
+                    <svg class="social__icon team-social" width="20" height="20">
                       <use href="./images/icons.svg#linkedin"></use>
                     </svg>
                   </a>
@@ -200,31 +199,31 @@
             <div class="team-card">
               <h3 class="title name">Ольга Репина</h3>
               <p class="position">Frontend Developer</p>
-              <ul class="social-list list">
-                <li class="social-list-item">
-                  <a href="" class="social-link link">
-                    <svg class="social-icon team-social" width="20" height="20">
+              <ul class="social__list list">
+                <li class="social__item">
+                  <a href="" class="social__link link">
+                    <svg class="social__icon team-social" width="20" height="20">
                       <use href="./images/icons.svg#instagram"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-list-item">
-                  <a href="" class="social-link link">
-                    <svg class="social-icon team-social" width="20" height="20">
+                <li class="social__item">
+                  <a href="" class="social__link link">
+                    <svg class="social__icon team-social" width="20" height="20">
                       <use href="./images/icons.svg#twitter"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-list-item">
-                  <a href="" class="social-link link">
-                    <svg class="social-icon team-social" width="20" height="20">
+                <li class="social__item">
+                  <a href="" class="social__link link">
+                    <svg class="social__icon team-social" width="20" height="20">
                       <use href="./images/icons.svg#facebook"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-list-item">
-                  <a href="" class="social-link link">
-                    <svg class="social-icon team-social" width="20" height="20">
+                <li class="social__item">
+                  <a href="" class="social__link link">
+                    <svg class="social__icon team-social" width="20" height="20">
                       <use href="./images/icons.svg#linkedin"></use>
                     </svg>
                   </a>
@@ -238,31 +237,31 @@
             <div class="team-card">
               <h3 class="title name">Николай Тарасов</h3>
               <p class="position">Marketing</p>
-              <ul class="social-list list">
-                <li class="social-list-item">
-                  <a href="" class="social-link link">
-                    <svg class="social-icon team-social" width="20" height="20">
+              <ul class="social__list list">
+                <li class="social__item">
+                  <a href="" class="social__link link">
+                    <svg class="social__icon team-social" width="20" height="20">
                       <use href="./images/icons.svg#instagram"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-list-item">
-                  <a href="" class="social-link link">
-                    <svg class="social-icon team-social" width="20" height="20">
+                <li class="social__item">
+                  <a href="" class="social__link link">
+                    <svg class="social__icon team-social" width="20" height="20">
                       <use href="./images/icons.svg#twitter"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-list-item">
-                  <a href="" class="social-link link">
-                    <svg class="social-icon team-social" width="20" height="20">
+                <li class="social__item">
+                  <a href="" class="social__link link">
+                    <svg class="social__icon team-social" width="20" height="20">
                       <use href="./images/icons.svg#facebook"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-list-item">
-                  <a href="" class="social-link link">
-                    <svg class="social-icon team-social" width="20" height="20">
+                <li class="social__item">
+                  <a href="" class="social__link link">
+                    <svg class="social__icon team-social" width="20" height="20">
                       <use href="./images/icons.svg#linkedin"></use>
                     </svg>
                   </a>
@@ -276,31 +275,31 @@
             <div class="team-card">
               <h3 class="title name">Михаил Ермаков</h3>
               <p class="position">UI Designer</p>
-              <ul class="social-list list">
-                <li class="social-list-item">
-                  <a href="" class="social-link link">
-                    <svg class="social-icon team-social" width="20" height="20">
+              <ul class="social__list list">
+                <li class="social__item">
+                  <a href="" class="social__link link">
+                    <svg class="social__icon team-social" width="20" height="20">
                       <use href="./images/icons.svg#instagram"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-list-item">
-                  <a href="" class="social-link link">
-                    <svg class="social-icon team-social" width="20" height="20">
+                <li class="social__item">
+                  <a href="" class="social__link link">
+                    <svg class="social__icon team-social" width="20" height="20">
                       <use href="./images/icons.svg#twitter"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-list-item">
-                  <a href="" class="social-link link">
-                    <svg class="social-icon team-social" width="20" height="20">
+                <li class="social__item">
+                  <a href="" class="social__link link">
+                    <svg class="social__icon team-social" width="20" height="20">
                       <use href="./images/icons.svg#facebook"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-list-item">
-                  <a href="" class="social-link link">
-                    <svg class="social-icon team-social" width="20" height="20">
+                <li class="social__item">
+                  <a href="" class="social__link link">
+                    <svg class="social__icon team-social" width="20" height="20">
                       <use href="./images/icons.svg#linkedin"></use>
                     </svg>
                   </a>
@@ -362,7 +361,7 @@
     <div class="container footer--position">
       <!-- Логотип и Адресы -->
       <div class="footer__container">
-        <a href="./index.html" class="logo">Web<span class="footer--logo">Studio</span></a>
+        <a href="./index.html" class="logo">Web<span class="logo--light">Studio</span></a>
         <address>
           <ul class="contacts-footer list">
             <li class="footer__item">
@@ -380,32 +379,32 @@
       </div>
       <!-- Блок Соцсетей -->
       <div class="social">
-        <h3 class="footer-title">присоединяйтесь</h3>
-        <ul class="social-list list">
-          <li class="social-list-item">
-            <a href="" class="social-link link">
-              <svg class="social-icon footer-social-icon" width="20" height="20">
+        <h3 class="social__title">присоединяйтесь</h3>
+        <ul class="social__list list">
+          <li class="social__item">
+            <a href="" class="social__link link">
+              <svg class="social__icon footer-social-icon" width="20" height="20">
                 <use href="./images/icons.svg#instagram"></use>
               </svg>
             </a>
           </li>
-          <li class="social-list-item">
-            <a href="" class="social-link link">
-              <svg class="social-icon footer-social-icon" width="20" height="20">
+          <li class="social__item">
+            <a href="" class="social__link link">
+              <svg class="social__icon footer-social-icon" width="20" height="20">
                 <use href="./images/icons.svg#twitter"></use>
               </svg>
             </a>
           </li>
-          <li class="social-list-item">
-            <a href="" class="social-link link">
-              <svg class="social-icon footer-social-icon" width="20" height="20">
+          <li class="social__item">
+            <a href="" class="social__link link">
+              <svg class="social__icon footer-social-icon" width="20" height="20">
                 <use href="./images/icons.svg#facebook"></use>
               </svg>
             </a>
           </li>
-          <li class="social-list-item">
-            <a href="" class="social-link link">
-              <svg class="social-icon footer-social-icon" width="20" height="20">
+          <li class="social__item">
+            <a href="" class="social__link link">
+              <svg class="social__icon footer-social-icon" width="20" height="20">
                 <use href="./images/icons.svg#linkedin"></use>
               </svg>
             </a>
@@ -413,14 +412,14 @@
         </ul>
       </div>
       <!-- Форма Подписки -->
-      <form class="footer-form">
-        <label class="footer-form-field">
+      <form class="subscribe-form">
+        <label class="subscribe-form__field">
           Подпишитесь на рассылку
-          <input class="footer-form-input" type="email" name="mail" placeholder="E-mail" required />
+          <input class="subscribe-form__input" type="email" name="mail" placeholder="E-mail" required />
         </label>
 
-        <button type="submit" class="button footer-button">
-          Подписаться<span class="footer-button__icon"><svg class="" width="24" height="24">
+        <button type="submit" class="button subscribe__button">
+          Подписаться<span class="subscribe__icon"><svg class="" width="24" height="24">
               <use href="./images/icons.svg#send"></use>
             </svg></span>
         </button>
