добавляет миксин для шрифтов

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <use href="./images/icons.svg#antenna"></use>
               </svg>
             </div>
-            <h3 class="title features-title">Внимание к деталям</h3>
+            <h3 class="features-title">Внимание к деталям</h3>
             <p class="features-desc">
               Идейные соображения, а также начало повседневной работы по формированию позиции.
             </p>
@@ -91,7 +91,7 @@
                 <use href="./images/icons.svg#clock"></use>
               </svg>
             </div>
-            <h3 class="title features-title">Пунктуальность</h3>
+            <h3 class="features-title">Пунктуальность</h3>
             <p class="features-desc">
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
@@ -103,7 +103,7 @@
                 <use href="./images/icons.svg#diagram"></use>
               </svg>
             </div>
-            <h3 class="title features-title">Планирование</h3>
+            <h3 class="features-title">Планирование</h3>
             <p class="features-desc">
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
@@ -115,7 +115,7 @@
                 <use href="./images/icons.svg#astronaut"></use>
               </svg>
             </div>
-            <h3 class="title features-title">Современные технологии</h3>
+            <h3 class="features-title">Современные технологии</h3>
             <p class="features-desc">
               Значимость этих проблем настолько очевидна, что реализация плановых заданий.
             </p>
@@ -379,7 +379,7 @@
       </div>
       <!-- Блок Соцсетей -->
       <div class="social">
-        <h3 class="social__title">присоединяйтесь</h3>
+        <h3 class="footer__title">присоединяйтесь</h3>
         <ul class="social__list list">
           <li class="social__item">
             <a href="" class="social__link link">
@@ -413,7 +413,7 @@
       </div>
       <!-- Форма Подписки -->
       <form class="subscribe-form">
-        <label class="subscribe-form__field">
+        <label class="subscribe-form__field footer__title">
           Подпишитесь на рассылку
           <input class="subscribe-form__input" type="email" name="mail" placeholder="E-mail" required />
         </label>
